@@ -4,10 +4,10 @@ export("%>%")
 export("dgram<-")
 export("groupsUMI4C<-")
 export(UMI4C)
-export(ZscoreUMI4C)
 export(addGrouping)
 export(alignmentUMI4C)
 export(bait)
+export(callInteractions)
 export(combineUMI4C)
 export(contactsUMI4C)
 export(counterUMI4C)
@@ -19,6 +19,7 @@ export(differentialNbinomWaldTestUMI4C)
 export(digestGenome)
 export(downloadUMI4CexampleData)
 export(fisherUMI4C)
+export(getSignInteractions)
 export(getViewpointCoordinates)
 export(groupsUMI4C)
 export(makeUMI4C)
