@@ -8,12 +8,38 @@
 #' @param query_regions \code{GRanges} object or \code{data.frame} containing
 #' the coordinates of the genomic regions you want to use to perform the
 #' analysis in specific genomic intervals. Default: NULL.
+#' @param padj_method The method to use for adjusting p-values, see
+#' \code{\link[stats]{p.adjust}}.  Default: fdr.
+#' @param padj_threshold Numeric indicating the adjusted p-value threshold to
+#' use to define significant differential contacts.  Default: 0.1.
+#' @param zscore_threshold Numeric indicating the z-score threshold to
+#' use to define significant differential contacts.  Default: 2.
+#' @param alpha Approximate number of fragments desired for every basis function
+#'  of the B-spline basis. \code{floor((max(number of fragments)) / alpha)} is 
+#'  passed to \code{create.bspline.basis} as nbasis argument. 4 is the minimum
+#'  allowed value. Default: 20.
+#' @param penalty Amount of smoothing to be applied to the estimated functional 
+#' parameter.  Default: 0.1.
 #' @return \code{\link[GenomicRanges]{GRangesList}} where each element is a 
 #' UMI4C sample with the queried regions and their adjusted p-values and Z-scores.
 #' @export
+#' @examples
+#' data("ex_ciita_umi4c")
+#' umi <- ex_ciita_umi4c
+#' win_frags <- makeWindowFragments(umi, n_frags=8, sliding=1)
+#' 
+#' gr <- callInteractions(umi, ~condition, win_frags, padj_threshold = 0.01, zscore_threshold=2)
+#' inter <- getSignInteractions(gr)
 callInteractions <- function(umi4c,
                              design=~condition,
-                             query_regions) {
+                             query_regions,
+                             padj_method="fdr",
+                             zscore_threshold=2,
+                             padj_threshold=0.1,
+                             alpha=20,
+                             penalty=0.1) {
+  ## TODO: Check first mcol query_regions is unique id
+  
   ## Sum raw UMIs in query_regions
   umi_win_frags <- combineUMI4C(umi4c, query_regions)
   
@@ -24,11 +50,14 @@ callInteractions <- function(umi4c,
   dds <- vstUMI4C(dds = dds)
   
   ## Smooth monotone fit
-  dds <- UMI4Cats:::smoothMonotoneUMI4C(dds = dds)
+  dds <- smoothMonotoneUMI4C(dds = dds, alpha = alpha, penalty = penalty)
   
   ## Obtain z-scores
-  dds <- zscoreUMI4C(dds)
-  dds <- addPeaksUMI4C(dds, fdr_thresh=0.01)
+  gr_interactions <- zscoreUMI4C(dds, padj_method = padj_method,
+                                 padj_threshold = padj_threshold,
+                                 zscore_threshold = zscore_threshold)
+  
+  return(gr_interactions)
 }
 
 #' Variance stabilizing transformation
@@ -69,11 +98,11 @@ vstUMI4C <- function(dds){
 #' information about the viewpoint have to be stored in the metadata as 
 #' \code{metadata(dds)[['bait']]}.
 #' @param dds DDS object as generated by \code{vstUMI4C} with the 
-#' variance stabilized count values
+#' variance stabilized count values.
+#' @inheritParams callInteractions
 #' @return DDS object with monotone smoothed fit counts. 
 #' @details This function computes the smoothing function for the VST values, based on
 #' \href{https://CRAN.R-project.org/package=fda}{fda} package, and calculates a symmetric monotone fit counts for the distance dependency
-#' @inheritParams differentialNbinomWaldTestUMI4C
 smoothMonotoneUMI4C <- function(dds,
                                 alpha=20,
                                 penalty=0.1){
@@ -127,11 +156,11 @@ smoothMonotoneUMI4C <- function(dds,
 #' @param trafo_counts Variance stabilized count values assay from DDS object.
 #' @param frag_data Data frame with all the information on restriction fragments
 #'  and the interval around the viewpoint.
+#' @inheritParams callInteractions
 #' @return A dataframe with monotone smoothed fit counts. 
 #' @details This function computes the smoothing function for the VST values, 
 #' based on \href{https://CRAN.R-project.org/package=fda}{fda} package, and 
 #' calculates a symmetric monotone fit counts for the distance dependency
-#' @inheritParams differentialNbinomWaldTestUMI4C
 .smoothMonotone <- function(trafo_counts,
                             alpha=20,
                             penalty=0.1,
@@ -155,46 +184,73 @@ smoothMonotoneUMI4C <- function(dds,
 #' adjusted for multiple testing using the method of Benjamini and Hochberg
 #' @param dds DDS object as generated by \code{smoothMonotoneUMI4C} with the 
 #' smooth monotone fit counts
+#' @inheritParams callInteractions
 #' @return DDS object with zscore,pvalue and padjusted assays 
 #' @details This function calculates the z-score for each fragment over all samples from the residuals of the 
 #' symmetric monotone fit and the median absolute deviation (mad). Z-scores are then converted 
 #' into one-sided P-values using the standard Normal cumulative distribution function, 
 #' and these are adjusted for multiple testing using the method of Benjamini and Hochberg
-#' @export
-zscoreUMI4C <- function(dds){
+zscoreUMI4C <- function(dds,
+                        padj_method="fdr",
+                        zscore_threshold=2,
+                        padj_threshold=0.1){
   residuals <- assay(dds, 'trafo') - assay(dds, 'fit')
-  sd <- apply(residuals, 2, BiocGenerics::mad)
-  zscore <- sweep(residuals, 2, sd, "/")
+  mad <- apply(residuals, 2, BiocGenerics::mad)
+  zscore <- sweep(residuals, 2, mad, "/")
   pvalue <- apply(zscore, 2, stats::pnorm, lower.tail = FALSE)
-  padjusted <- apply(pvalue, 2, stats::p.adjust, method = "BH")
-  colData(dds)$sd <- sd
-  assays(dds)[["zscore"]] <- zscore
-  assays(dds)[["pvalue"]] <- pvalue
-  assays(dds)[["padjusted"]] <- padjusted 
-  return(dds)
+  padjusted <- apply(pvalue, 2, stats::p.adjust, method = padj_method)
+  
+  ## All samples from each condition pass zscore threshold
+  coldata <- colData(dds)
+  group_var <- as.character(BiocGenerics::design(dds))[2]
+  lv <- levels(colData(dds)[,group_var])
+  n <- table(colData(dds)[,group_var])
+  
+  zscore_pass1 <- rowSums(zscore[,coldata$sampleID[coldata[,group_var]==lv[1]]] > zscore_threshold) == n[1]
+  zscore_pass2 <- rowSums(zscore[,coldata$sampleID[coldata[,group_var]==lv[2]]] > zscore_threshold) == n[2]
+  
+  zscore_pass <- as.logical(zscore_pass1 + zscore_pass2)
+  
+  ## Create GRangesList for each sample
+  gr_list <- lapply(seq_len(dim(dds)[2]),
+                    function(i) {
+                      ranges <- rowRanges(dds)
+                      mcols(ranges) <- cbind(mcols(ranges),
+                                             zscore[,i],
+                                             pvalue[,i],
+                                             padjusted[,i])
+                      ## TODO: Do not force ncols and colnames
+                      colnames(mcols(ranges)) <- c("id", "position", "zscore",
+                                                   "pval", "padj")
+                      ranges$sign <- FALSE
+                      ranges$sign[ranges$padj < padj_threshold & 
+                                    zscore_pass] <- TRUE
+                      return(ranges)
+                    })
+  
+  gr_list <- GRangesList(gr_list)
+  names(gr_list) <- colnames(dds)
+  
+  return(gr_list)
 }
 
-#' Significant fragment caller
+#' Get significant interactions from a GRangesList
 #' 
-addPeaksUMI4C <- function(dds, zscore_thresh = 2, fdr_thresh = 0.1){
+#' @param gr_interactions GRangesList outputed by \code{zscoreUMI4C}.
+#' @return \code{GRanges} object with a list of significantly interacting regions.
+#' @export
+#' @examples
+#' data("ex_ciita_umi4c")
+#' umi <- ex_ciita_umi4c
+#' win_frags <- makeWindowFragments(umi, n_frags=8, sliding=1)
+#' 
+#' gr <- callInteractions(umi, ~condition, win_frags, padj_threshold = 0.01, zscore_threshold=2)
+#' inter <- getSignInteractions(gr)
+getSignInteractions <- function(gr_interactions) {
+  gr_sign <- unlist(GRangesList(lapply(gr_interactions, function(x) x[x$sign])))
+  gr_sign <- gr_sign[,!(colnames(mcols(gr_sign)) %in% c("zscore", "pval", "padj", "sign"))]
+  names(gr_sign) <- NULL
+  gr_sign <- unique(gr_sign)
   
-  zscore <- assay(dds, "zscore")
-  fdr <- assay(dds, "padjusted")
-  
-  peaks = array(FALSE, dim=dim(fdr), dimnames=dimnames(fdr))
-  
-  for(lvl in levels(colData(dds)$condition)){
-    cond_cols <- colData(dds)$condition == lvl 
-    tmp <- (apply(fdr[,cond_cols, drop=FALSE] < fdr_thresh, 1, any, na.rm=TRUE) & 
-              apply(zscore[,cond_cols, drop=FALSE] > zscore_thresh, 1, all, na.rm=TRUE))    
-    ## annotate peaks
-    peaks[tmp,cond_cols] = TRUE
-  }
-  
-  assays(dds)[["peaks"]] <- peaks
-  
-  metadata(dds)$peakParameter <- S4Vectors::DataFrame(zscore_thresh = zscore_thresh, 
-                                                      fdr_thresh = fdr_thresh)
-  
-  return(dds)
+  return(gr_sign)
 }
