@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
+% Please edit documentation in R/utils.R
 \name{UMI4C2dds}
 \alias{UMI4C2dds}
 \title{UMI4Cats object to DDS object.}
