@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/waldUMI4C.R
+% Please edit documentation in R/utils.R
 \name{combineUMI4C}
 \alias{combineUMI4C}
 \title{Combine UMI4C fragments}
