@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
+% Please edit documentation in R/utils.R
 \name{dds2UMI4C}
 \alias{dds2UMI4C}
 \title{DDS object to UMI4Cats object.}
