@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
+% Please edit documentation in R/callInteractions.R
 \name{.smoothMonotone}
 \alias{.smoothMonotone}
 \title{Monotone smoothing of the VST counts}
