@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
+% Please edit documentation in R/callInteractions.R
 \name{smoothMonotoneUMI4C}
 \alias{smoothMonotoneUMI4C}
 \title{Monotone smoothing of the DDS object VST counts}
@@ -8,7 +8,7 @@ smoothMonotoneUMI4C(dds, alpha = 20, penalty = 0.1)
 }
 \arguments{
 \item{dds}{DDS object as generated by \code{vstUMI4C} with the 
-variance stabilized count values}
+variance stabilized count values.}
 
 \item{alpha}{Approximate number of fragments desired for every basis function
 of the B-spline basis. \code{floor((max(number of fragments)) / alpha)} is 
