@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
+% Please edit documentation in R/callInteractions.R
 \name{vstUMI4C}
 \alias{vstUMI4C}
 \title{Variance stabilizing transformation}
