@@ -1,14 +1,28 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
-\name{ZscoreUMI4C}
-\alias{ZscoreUMI4C}
+% Please edit documentation in R/callInteractions.R
+\name{zscoreUMI4C}
+\alias{zscoreUMI4C}
 \title{Z-score calculation using residuals of trend and fit UMI4C counts}
 \usage{
-ZscoreUMI4C(dds)
+zscoreUMI4C(
+  dds,
+  padj_method = "fdr",
+  zscore_threshold = 2,
+  padj_threshold = 0.1
+)
 }
 \arguments{
 \item{dds}{DDS object as generated by \code{smoothMonotoneUMI4C} with the 
 smooth monotone fit counts}
+
+\item{padj_method}{The method to use for adjusting p-values, see
+\code{\link[stats]{p.adjust}}.  Default: fdr.}
+
+\item{zscore_threshold}{Numeric indicating the z-score threshold to
+use to define significant differential contacts.  Default: 2.}
+
+\item{padj_threshold}{Numeric indicating the adjusted p-value threshold to
+use to define significant differential contacts.  Default: 0.1.}
 }
 \value{
 DDS object with zscore,pvalue and padjusted assays
